refactor: remove legacy unlock flow and rebuild district vertical slice
- deleted TechUnlockEntity and related legacy associations
- removed unlock graph from Tech domain and mappers
- cleaned TechJpaRepository entity graph + native cleanup queries
- simplified TechRepositoryAdapter import logic
- rebuilt DistrictEntity with district_key + descriptionLines model
- added Flyway migration for new districts schema
- updated repository, facade, controller and tests
- removed obsolete DB tables (tech_unlock, treaty, etc.)
- aligned H2 and Postgres compatibility

System now runs without legacy unlock structure.
District slice is first clean vertical slice.